# abelnotes

./: .gitignore  ACKNOWLEDGMENTS.md  ARCHITECTURE.md  NCNOTE_FORMAT_GUIDE.md  README.md  SECURITY.md  TRADEMARK.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle.kts
assets/branding/: README.md
flatpak/: README.md  app.abelnotes.notes.desktop  app.abelnotes.notes.metainfo.xml  flatpak-flutter.yml
flatpak/flathub-submission/: .gitignore  app.abelnotes.notes.yml
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: app_config.dart
lib/l10n/: app_en.arb  app_es.arb  app_it.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_it.dart
linux/: CMakeLists.txt
linux/runner/: main.cc  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
native/: build_onenote_bridge.sh
native/onenote_bridge/: Cargo.toml
native/onenote_bridge/src/: lib.rs
test/: loose_store_test.dart  math_rasterizer_test.dart  pdf_text_extractor_test.dart  pdf_text_layer_json_test.dart  pdf_text_selection_test.dart  perf_optimizations_test.dart  render_math_paint_test.dart  rich_paste_fourier_repro_test.dart  rich_text_test.dart  webdav_generic_integration_test.dart  webdav_multistatus_test.dart  widget_test.dart
tool/: README.md  audit_notebooks.dart  build_deb.sh  compress_pdf_assets.dart  pdfrx_native_check.dart  repair_empty_delta.dart
web/: manifest.json
windows/: CMakeLists.txt
(+78 files in other folders)
